--- a/index.html
+++ b/index.html
@@ -2,16 +2,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="mystyle.css">
     <title>Welcome to my life</title>
 </head>
 <body>
-    <div>
-        <h2>Hello Everybody</h2>
-        <h1>This is Me!</h1>
-        <h2>Giulio Cast</h2>
-        <img src="images/Giulio.png" width="400" alt="My Picture">
-        <p> A short presentation of me, my interests, my job and my passions.</p>
-        <span>I'm a 30 years old guy from Italy. I love my Job and I have a few passions and hobbies.</span>
+    <div id=firstdiv>
+        <div id=presentation>
+            <h2>Hello Everybody</h2>
+            <h1>This is Me!</h1>
+            <h2>Giulio Cast</h2>
+            <img src="images/Giulio.png" width="400" alt="My Picture">
+            <br>
+            <span> Me, My Job, My Passion and My Hobbies.</span>
+        </div>
+        <div id=contacts>
+            <span>My Contacts</span>
+            <ul>
+                <li><a href="https://www.facebook.com/casty">Facebook</a></li>
+                <li><a href="https://www.linkedin.com/in/giulio-castiglioni/">Linkedin</a></li>
+                <li><a href="mailto:giuliocast90@gmail.com">E-Mail</a></li>
+                <li><a href="callto:+393494410363">Telephone</a></li>
+            </ul>
+        </div>
+    </div>
+    <div id=boxes>
+        <div class="singleboxes">
+            <h2>MY JOB.</h2>
+            <a href="myjob.html"><img src="images/puc.jpeg" alt="PrenotaUnCampo"></a>
+            <br>
+            <span>click on the image</span>
+        </div>
+
+        <div class="singleboxes">
+            <h2>MY PASSION.</h2>
+            <a href="mypassion.html"><img src="images/squadra2019.jpg" alt="MyTeam"></a>
+        </div>
+        
+        <div class="singleboxes">
+            <h2>MY HOBBIES.</h2>
+            <a href="myhobbies.html"><img src="images/hobbies.jpg" alt="CookingAndTravelling"></a>
+        </div>
+
+
     </div>
 </body>
 </html>
